2024-02-21  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.2-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.2-alpha01: IRS 1040';git push
	git tag -a 5.2.2-alpha01 -m 'Functionally identical to 5.2.1 (adds -lgslcblas, fix andes paths)';git push --tags

	* ncremap/ncclimo/configure.eg change Andes E3SMU paths to /ccs/proj/cli115/software/e3sm-unified

	* bld/Makefile, nco++/Makefile add -lgslcblas for Derecho

2024-02-18  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.1 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.1: Shabu Shabu';git push
	git tag -a 5.2.1 -m 'Functionally identical to 5.2.0 (except compiles with bld/Makefile, fixes ncclimo/ncremap syntax)';git push --tags

2024-02-17  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.1-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.1-alpha01: Engoron';git push
	git tag -a 5.2.1-alpha01 -m 'Functionally identical to 5.2.0 (except compiles with bld/Makefile, fixes ncclimo/ncremap syntax)';git push --tags

	* ncclimo/ncremap: fix script errors caused during deprecation of COBALT batch scheduler

2024-02-16  Charlie Zender  <zender@uci.edu>

	* nco_qnt_mtd() implement workaround to compiler-dependent behavior at tokenization
	Prevents error on too many decimal points in number in expansion of macro ‘NCO_VERSION’	when version is purely numeric, e.g., 5.2.0

	* NCO 5.2.0 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.0: Fast Car';git push
	git tag -a 5.2.0 -m 'all: cf lsy mtd; ncclimo: tms inp_aut, fix inp_glb, fix djf-mode clm_bnd; ncclimo/ncremap: dpr cheyenne+ALCF mch, spp derecho, upd perlmutter; ncks: --chk_bnd, S1D works; ncremap: TR --mono*, ncoidw, MWF alg_lst, trfv2';git push --tags

	* Add lossy_compression to list of attributes that cause variable to be treated as associated coordinate

	* ncremap change alg_lst from space-separated to comma-separated

	* nco.texi document chk_bnd, S1D, --alg_lst

2024-02-15  Charlie Zender  <zender@uci.edu>
