@@ -1,1 +1,1 @@
-5.2.2-alpha01
+5.2.2-alpha02
