@@ -1,3 +1,11 @@
+2024-02-27  Charlie Zender  <zender@uci.edu>
+
+	* NCO 5.2.2-alpha02 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.2.2-alpha02: Broken Molar';git push
+	git tag -a 5.2.2-alpha02 -m 'ncremap: --monotonicity';git push --tags
+
+	* ncremap: Walter Hannah changed mbtempest argument name from "monotonic" to "monotonicity"
+
 2024-02-21  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.2.2-alpha01 release procedure:
